# manifold

./: .gitignore  README.md
manifold/: Cargo.toml
manifold/examples/: approx.rs  approx_iso.rs  classification.rs  compose.rs  evolution.rs  feedforward.rs  neat_approx.rs  neat_async.rs  neat_sync.rs  regression.rs  xor.py  xor.rs  xor3.rs  xor_control.rs
manifold/src/: activation.rs  lib.rs  loss.rs  loss3.rs  substrate.rs  util.rs
manifold/src/f/: activation.rs  averages.rs  distributed.rs  mod.rs
manifold/src/layers/: dense.rs  dense_iso.rs  dense_single.rs  mod.rs  types.rs
manifold/src/manifold/: composable.rs  dnn.rs  dnn_iso.rs  fc.rs  fc3.rs  fc3_iso.rs  fc_single.rs  mod.rs  trainer.rs  types.rs
manifold/src/neat/: data.rs  mod.rs  neat.rs  worker.rs
manifold/src/neat/async_distributed/: mod.rs  neat.rs  worker.rs
manifold/src/neat/sync_directed/: neat.rs  worker.rs
manifold/src/optimizers/: mbgd.rs  mbgd3.rs  mbgd3_iso.rs  mod.rs  optimizer.rs
plural/: Cargo.toml  loss.html
plural/examples/: approx.rs  feedforward.rs  xor.rs
plural/src/: activation.rs  lib.rs  loss.rs  substrate.rs
plural/src/f/: loss.rs  metrics.rs  shape.rs
plural/src/manifold/: fc.rs  mod.rs  trainer.rs
plural/src/manifolds/: fc.rs
plural/src/neat/: data.rs  mod.rs  neat.rs
