[package]
name = "plural"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
ndarray = { version = "0.15.6", features = [ "serde" ] }
ndarray-rand = "0.14.0"
ndarray-stats = "0.5.1"
plotly = "0.8.4"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive", "rc"] }
serde_json = "1.0.114"
uuid = { version = "1.8.0", features = ["v4"] }
zerocopy = { version = "0.7.32", features = [ "derive" ] }
zmq = "0.9.0"

[dev-dependencies]
mnist = "0.6.0"
